[package]
name = "hoarder-blob"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.182"
rustix = { version = "1.1.4", default-features = false, features = ["libc", "libc_errno", "net"]}
zerocopy = { version = "0.8.42", features = ["derive"] }
zerocopy-derive = "0.8.42"
hoarder-io = { path = "../hoarder-io" }
hoarder-common = { path = "../hoarder-common" }
hoarder-collections = { path = "../hoarder-collections" }
hoarder-log = { path = "../hoarder-log" }